address comments; bring back timeout and revive

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,6 @@
 version: "2"
 run:
+  timeout: 10m
   build-tags:
     - build
     - containers_image_openpgp
@@ -9,10 +10,10 @@ linters:
     - gosec
     - misspell
     - errcheck
-    - gofmt
     - gosec
-    - goimports
-    # - revive  # revive is flagging ginkgo and gomega dot-imports
+    - revive
+  disable:
+    - dotimports
   exclusions:
     generated: lax
     presets:
@@ -20,17 +21,9 @@ linters:
       - common-false-positives
       - legacy
       - std-error-handling
-    paths:
-      - third_party$
-      - builtin$
-      - examples$
 formatters:
   enable:
     - gofmt
     - goimports
   exclusions:
     generated: lax
-    paths:
-      - third_party$
-      - builtin$
-      - examples$
